[gd_scene load_steps=52 format=2]

[ext_resource path="res://art/textures/Player.png" type="Texture" id=1]
[ext_resource path="res://art/textures/Visor.png" type="Texture" id=2]
[ext_resource path="res://scripts/characters/player/player.gd" type="Script" id=3]
[ext_resource path="res://art/prefabs/raycast.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/characters/player/dash_raycasts.gd" type="Script" id=5]
[ext_resource path="res://scripts/characters/player/visor.gd" type="Script" id=6]

[sub_resource type="ParticlesMaterial" id=1]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 1, 1, 1, 0.588235 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 39, 14, 13, 7 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 52, 14, 13, 7 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 65, 14, 13, 7 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 65, 0, 13, 7 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 7, 13, 7 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 13, 7, 13, 7 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 26, 7, 13, 7 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 39, 7, 13, 7 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 39, 0, 13, 7 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 52, 0, 13, 7 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 65, 0, 13, 7 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 0, 7, 13, 7 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 13, 7, 13, 7 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 26, 7, 13, 7 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 39, 7, 13, 7 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 52, 7, 13, 7 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 65, 7, 13, 7 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 0, 14, 13, 7 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 13, 14, 13, 7 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 26, 14, 13, 7 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 13, 7 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 65, 0, 13, 7 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 0, 7, 13, 7 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 13, 7, 13, 7 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 26, 7, 13, 7 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 39, 7, 13, 7 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 13, 0, 13, 7 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 65, 0, 13, 7 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 0, 7, 13, 7 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 2 )
region = Rect2( 13, 7, 13, 7 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 2 )
region = Rect2( 26, 7, 13, 7 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 2 )
region = Rect2( 39, 7, 13, 7 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 13, 7 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 2 )
region = Rect2( 65, 0, 13, 7 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 2 )
region = Rect2( 0, 7, 13, 7 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 2 )
region = Rect2( 13, 7, 13, 7 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 2 )
region = Rect2( 26, 7, 13, 7 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 39, 7, 13, 7 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 2 )
region = Rect2( 26, 0, 13, 7 )

[sub_resource type="SpriteFrames" id=41]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "Hurt",
"speed": 32.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "Broken",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": false,
"name": "Diagonal",
"speed": 32.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": false,
"name": "Start",
"speed": 32.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": false,
"name": "Up",
"speed": 32.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": false,
"name": "Idle",
"speed": 32.0
}, {
"frames": [ SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ) ],
"loop": false,
"name": "Right",
"speed": 32.0
} ]

[sub_resource type="Animation" id=42]
resource_name = "hit"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 0.784314 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visor:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 0.784314 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=43]
radius = 7.52312

[sub_resource type="RectangleShape2D" id=44]
extents = Vector2( 9, 6 )

[sub_resource type="RectangleShape2D" id=45]
extents = Vector2( 6, 9 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 2
collision_mask = 5
script = ExtResource( 3 )

[node name="Dash" type="Particles2D" parent="."]
emitting = false
amount = 20
lifetime = 0.3
local_coords = false
process_material = SubResource( 1 )
texture = ExtResource( 1 )

[node name="Body" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Visor" type="AnimatedSprite" parent="."]
position = Vector2( 0, -3 )
frames = SubResource( 41 )
animation = "Start"
offset = Vector2( -0.5, -0.5 )
script = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hit = SubResource( 42 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 43 )

[node name="Sparks" type="CPUParticles2D" parent="."]
position = Vector2( 0, 7.5 )
emitting = false
amount = 3
lifetime = 0.25
speed_scale = 1.6
randomness = 0.2
local_coords = false
gravity = Vector2( 0, -98 )
angular_velocity = 4.0
linear_accel = 40.0
scale_amount = 2.0
scale_amount_random = 0.8
color = Color( 0, 1, 1, 0.588235 )

[node name="Timers" type="Node2D" parent="."]

[node name="CoyoteTime" type="Timer" parent="Timers"]
wait_time = 0.1
one_shot = true

[node name="CanDash" type="Timer" parent="Timers"]
one_shot = true

[node name="Dash" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="Rebound" type="Timer" parent="Timers"]
wait_time = 0.15
one_shot = true

[node name="RayCasts" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Horizontals" type="Position2D" parent="RayCasts"]
visible = false

[node name="RayCast1" parent="RayCasts/Horizontals" instance=ExtResource( 4 )]
rotation = -0.436332
collision_mask = 5

[node name="RayCast2" parent="RayCasts/Horizontals" instance=ExtResource( 4 )]
rotation = 0.436332
collision_mask = 5

[node name="Verticals" type="Position2D" parent="RayCasts"]
visible = false

[node name="RayCast1" parent="RayCasts/Verticals" instance=ExtResource( 4 )]
rotation = 1.13446
collision_mask = 5

[node name="RayCast2" parent="RayCasts/Verticals" instance=ExtResource( 4 )]
rotation = 2.00713
collision_mask = 5

[node name="HorizontalDetector" type="Area2D" parent="."]
gravity = 0.0
monitoring = false
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="HorizontalDetector"]
shape = SubResource( 44 )

[node name="VerticalDetector" type="Area2D" parent="."]
gravity = 0.0
monitoring = false
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="VerticalDetector"]
shape = SubResource( 45 )
[connection signal="animation_finished" from="Visor" to="." method="_on_Visor_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timers/CanDash" to="." method="_on_CanDash_timeout"]
[connection signal="timeout" from="Timers/Dash" to="." method="_on_Dash_timeout"]
[connection signal="body_entered" from="HorizontalDetector" to="RayCasts" method="_on_HorizontalDetector_body_entered"]
[connection signal="body_entered" from="VerticalDetector" to="RayCasts" method="_on_VerticalDetector_body_entered"]
